Uso do getFirst